# diagram-mcp-server

./: Dockerfile  pyproject.toml
src/diagram_mcp/: server.py
