[project]
name = "diagram-mcp-server"
version = "0.1.0"
description = "MCP server for generating Matplotlib and Manim diagrams"
dependencies = [
    "mcp>=1.1.2",
    "matplotlib>=3.8.0",
    "manim>=0.18.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
    "fastapi>=0.100.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diagram_mcp"]
